# tms-robot-control

./: .env.example  .gitignore  README.md  constants.py  display.py  environment.yml  helpers.py  main_loop.py  plot.py  plot_for_debug.py  pyproject.toml  relay_server.py  requirements.txt  robot.csv  robot_angles.csv  robot_api.py  robot_coord.csv  start-robot.bat  test-matrix.py  test_elfin.py  test_universal.py  test_universal_robot.py  tmp  tracker.csv  tracker_angles.csv  tracker_coord.csv
.github/workflows/: ruff-autoformat.yml
docs/: multiple_robots.md
robot/: constants.py  coordinates.py  elfin.py  elfin_processing.py  pub.py  robot.py  transformations.py  utils.py
robot/control/: PID.py  color.py  coordinates.py  dobot_api.py  elfin.py  elfin_processing.py  ft.py  pressure_sensor.py  repulsion.py  robot.py  robot_control.py  robot_processing.py  robot_state_controller.py
robot/control/algorithms/: directly_PID.py  directly_upward.py  directly_upwards.py  radially_outward.py  radially_outwards.py
robot/resources/: Rot.npy  Tr.npy
robot/robot_api/: dobot_api.py  elfin_api.py  elfin_linux_api.py
robot/robots/: axis.py  direction.py  dobot.py  elfin.py  elfin_linux.py  robot.py
robot/robots/dobot/: dobot.py  dobot_connection.py
robot/robots/elfin/: elfin.py  elfin_connection.py  elfin_connection_linux.py  motion_state.py  test_elfin.py
robot/robots/universal/: universal.py  (+3 more)
robot/sensors/: force_and_torque_sensor.py  fusion_sensors.py  pressure_sensor.py
ros2_ws/src/neuronavigation_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/neuronavigation_interfaces/msg/: ElectricField.msg  EulerAngles.msg  OptitrackPoses.msg  PoseUsingEulerAngles.msg
ros2_ws/src/neuronavigation_interfaces/srv/: Efield.srv  EfieldNorm.srv  EfieldRoiMax.srv  InitializeEfield.srv  OpenOrientationDialog.srv  SetCoil.srv  Setdiperdt.srv
ros2_ws/src/robot/robot_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot/robot_control/robot/: robot.py
(+7 files in other folders)
