cmake_minimum_required(VERSION 3.8)
project(neuronavigation_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(std_msgs REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/EulerAngles.msg"
  "msg/OptitrackPoses.msg"
  "msg/PoseUsingEulerAngles.msg"
  "msg/ElectricField.msg"

  "srv/Efield.srv"
  "srv/InitializeEfield.srv"
  "srv/SetCoil.srv"
  "srv/OpenOrientationDialog.srv"
  "srv/EfieldNorm.srv"
  "srv/EfieldRoi.srv"
  "srv/EfieldRoiMax.srv"
  "srv/Setdiperdt.srv"
  DEPENDENCIES geometry_msgs
 )

ament_package()
