<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.1</version>
  <description>ROS package for neuronavigation</description>

  <maintainer email="renan.matsuda@usp.br">Renan Matsuda</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>

  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
